src/test/ui/label/label_misspelled.stderr
error[E0425]: cannot find value `LOOP` in this scope
  --> $DIR/label_misspelled.rs:3:9
   |
LL |         LOOP;
   |         ^^^^
   |         |
   |         not found in this scope
   |         help: a label with a similar name exists: `'LOOP`

error[E0425]: cannot find value `while_loop` in this scope
  --> $DIR/label_misspelled.rs:7:9
   |
LL |         while_loop;
   |         ^^^^^^^^^^
   |         |
   |         not found in this scope
   |         help: a label with a similar name exists: `'while_loop`

error[E0425]: cannot find value `while_let` in this scope
  --> $DIR/label_misspelled.rs:11:9
   |
LL |         while_let;
   |         ^^^^^^^^^
   |         |
   |         not found in this scope
   |         help: a label with a similar name exists: `'while_let`

error[E0425]: cannot find value `for_loop` in this scope
  --> $DIR/label_misspelled.rs:15:9
   |
LL |         for_loop;
   |         ^^^^^^^^
   |         |
   |         not found in this scope
   |         help: a label with a similar name exists: `'for_loop`

error[E0425]: cannot find value `LOOP` in this scope
  --> $DIR/label_misspelled.rs:22:15
   |
LL |         break LOOP;
   |               ^^^^
   |               |
   |               not found in this scope
   |               help: a label with a similar name exists: `'LOOP`

error[E0425]: cannot find value `while_loop` in this scope
  --> $DIR/label_misspelled.rs:26:15
   |
LL |         break while_loop;
   |               ^^^^^^^^^^
   |               |
   |               not found in this scope
   |               help: a label with a similar name exists: `'while_loop`

error[E0425]: cannot find value `while_let` in this scope
  --> $DIR/label_misspelled.rs:31:15
   |
LL |         break while_let;
   |               ^^^^^^^^^
   |               |
   |               not found in this scope
   |               help: a label with a similar name exists: `'while_let`

error[E0425]: cannot find value `for_loop` in this scope
  --> $DIR/label_misspelled.rs:36:15
   |
LL |         break for_loop;
   |               ^^^^^^^^
   |               |
   |               not found in this scope
   |               help: a label with a similar name exists: `'for_loop`

warning: denote infinite loops with `loop { ... }`
  --> $DIR/label_misspelled.rs:6:5
   |
LL |     'while_loop: while true {
   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

warning: denote infinite loops with `loop { ... }`
  --> $DIR/label_misspelled.rs:25:5
   |
LL |     'while_loop: while true {
   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: use `loop`

error[E0571]: `break` with value from a `while` loop
  --> $DIR/label_misspelled.rs:26:9
   |
LL |         break while_loop;
   |         ^^^^^^^^^^^^^^^^ can only break with a value inside `loop` or breakable block
   |
help: instead, use `break` on its own without a value inside this `while` loop
   |
LL |         break;
   |         ^^^^^

error[E0571]: `break` with value from a `while` loop
  --> $DIR/label_misspelled.rs:31:9
   |
LL |         break while_let;
   |         ^^^^^^^^^^^^^^^ can only break with a value inside `loop` or breakable block
   |
help: instead, use `break` on its own without a value inside this `while` loop
   |
LL |         break;
   |         ^^^^^

error[E0571]: `break` with value from a `for` loop
  --> $DIR/label_misspelled.rs:36:9
   |
LL |         break for_loop;
   |         ^^^^^^^^^^^^^^ can only break with a value inside `loop` or breakable block
   |
help: instead, use `break` on its own without a value inside this `for` loop
   |
LL |         break;
   |         ^^^^^

error: aborting due to 11 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0425, E0571.
For more information about an error, try `rustc --explain E0425`.
